--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,347 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+* {
+  margin: 0;
+  padding: 0;
+  text-transform: capitalize;
 }
 
 body {
-  margin: 0;
+  overflow-x: hidden;
+}
+
+.firtpart {
+  width: 100vw;
+  height: 800px;
+  background: url(./assets/portrait-joyful-young-man-white-shirt.jpg)
+    center/cover;
+}
+
+.firtpart-title {
+  font-size: 3.75rem;
+  font-family: sans-serif;
+  width: 530px;
+  position: relative;
+  top: 80px;
+  left: 200px;
+}
+
+.firstpartCart1 {
+  width: 550px;
+  height: 175px;
+  background-color: white;
+  position: relative;
+  top: 130px;
+  left: 200px;
+}
+
+.firstpartCart2 {
+  width: 550px;
+  height: 175px;
+  background-color: white;
+  position: relative;
+  top: 180px;
+  left: 200px;
+}
+
+.firtpartcart1-title {
+  font-family: sans-serif;
+  font-size: 20px;
+  position: relative;
+  left: 20px;
+  top: 20px;
+}
+.firtpartcart1-text {
+  font-family: sans-serif;
+  position: relative;
+  left: 20px;
+  top: 40px;
+  font-size: 18px;
+  width: 500px;
+}
+
+.secondpart {
+  width: 100vw;
+  height: 510px;
+  background-color: #f96c0f;
+}
+
+.secontparttitle {
+  color: white;
+  font-family: sans-serif;
+  width: 600px;
+  font-size: 2.25rem;
+  width: 630px;
+  text-align: center;
+  position: relative;
+  top: 120px;
+  left: 650px;
+}
+
+.secondpartcart1 {
+  width: 555px;
+  height: 200px;
+  background: white;
+  position: relative;
+  top: 180px;
+  left: 400px;
+}
+
+.secondpartwomen1 {
+  width: 148px;
+  height: 108px;
+  position: relative;
+  left: 30px;
+  top: 45px;
+}
+.secondparttext {
+  width: 350px;
+  font-size: 17px;
+  font-family: sans-serif;
+  position: relative;
+  left: 190px;
+  top: -60px;
+}
+
+.secondpartcart2 {
+  width: 555px;
+  height: 200px;
+  background: white;
+  position: relative;
+
+  left: 970px;
+  top: -20px;
+}
+
+.secondpartwomen1 {
+  width: 148px;
+  height: 108px;
+  position: relative;
+  left: 30px;
+  top: 45px;
+}
+.secondparttext {
+  width: 350px;
+  font-size: 17px;
+  font-family: sans-serif;
+  position: relative;
+  left: 190px;
+  top: -60px;
+}
+
+.MembersPart {
+  width: 100vw;
+  height: 1750px;
+}
+
+.memebersPartTitle {
+  font-size: 2.25rem;
+  font-family: sans-serif;
+  position: relative;
+  left: 830px;
+  top: 100px;
+}
+
+.arkaplan {
+  height: 165px;
+  width: 100vw;
+  background-color: #f96c0f;
+  position: relative;
+  top: 400px;
+}
+.kisi1 {
+  width: 260px;
+  position: relative;
+  top: 140px;
+  left: 300px;
+}
+.kisi2 {
+  width: 260px;
+  position: relative;
+  top: -40px;
+  left: 650px;
+}
+.kisi3 {
+  width: 260px;
+  position: absolute;
+  top: 1660px;
+  left: 1000px;
+}
+.kisi4 {
+  width: 260px;
+  position: absolute;
+  top: 1830px;
+  left: 1360px;
+}
+.kisi5 {
+  width: 260px;
+  position: absolute;
+  top: 2300px;
+  left: 300px;
+}
+.kisi6 {
+  width: 260px;
+  position: absolute;
+  top: 2550px;
+  left: 650px;
+}
+.kisi7 {
+  width: 260px;
+  position: absolute;
+  top: 2300px;
+  left: 1000px;
+}
+.kisi8 {
+  width: 260px;
+  position: absolute;
+  top: 2550px;
+  left: 1360px;
+}
+.kisi1img {
+  width: 260px;
+  height: 310px;
+}
+
+.kisi1Name {
+  text-align: center;
+  font-family: sans-serif;
+  position: relative;
+  top: 15px;
+  font-size: 18px;
+}
+
+.kisi1Gorev {
+  text-align: center;
+  font-family: sans-serif;
+  position: relative;
+
+  top: 30px;
+  font-size: 18px;
+}
+
+.row2 {
+  position: relative;
+  top: -800px;
+}
+
+.contactUs {
+  height: 350px;
+  width: 100vw;
+  background-color: #f96c0f;
+}
+
+.ContactUsTitle {
+  color: white;
+  font-family: sans-serif;
+  font-size: 2.25rem;
+  text-align: center;
+  position: relative;
+  top: 50px;
+}
+
+.ContactUsText {
+  color: white;
+  font-family: sans-serif;
+  font-size: 18px;
+  width: 400px;
+  text-align: center;
+  position: relative;
+  top: 80px;
+  left: 780px;
+}
+
+.iconphone {
+  width: 200px;
+}
+
+.btn {
+  width: 210px;
+  height: 65px;
+  background-color: black;
+  color: white;
+  font-size: 22px;
+  position: relative;
+  top: 140px;
+  left: 850px;
+  border: none;
+  transition: all 0.3s linear;
+}
+
+.btn:hover {
+  background-color: white;
+  color: black;
+}
+
+.tekadam {
+  width: 100vw;
+  height: 750px;
+}
+.tekadamimg {
+  width: 300px;
+  height: 300px;
+  position: relative;
+  top: 50px;
+  left: 800px;
+}
+
+.TekAdamText {
+  font-size: 40px;
+  font-family: sans-serif;
+  position: relative;
+  left: 850px;
+  top: 80px;
+}
+
+.tekadamtext2 {
+  font-size: 22px;
+  font-family: sans-serif;
+  position: relative;
+  top: 110px;
+  left: 600px;
+}
+
+.number {
+  font-size: 25px;
+  font-family: sans-serif;
+  position: relative;
+  top: 170px;
+  left: 800px;
+}
+
+.location {
+  font-size: 25px;
+  font-family: sans-serif;
+  position: relative;
+  top: 190px;
+  left: 720px;
+}
+
+.mail {
+  font-size: 25px;
+  font-family: sans-serif;
+  position: relative;
+  top: 200px;
+  left: 800px;
+}
+
+.location h3 {
+  display: inline;
+}
+.number h3 {
+  display: inline;
+}
+.mail h3 {
+  display: inline;
+}
+
+
+.footer{
+  width: 100vw;
+  height: 220px;
+  background-color: #333333;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 20px;
+  font-family: sans-serif;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
